# Day3

./: .gitignore  README-MCP.md  README.md  agent.py  app.py  app_mcp.py  generate.py  hybrid_search.py  ingest.py  ingestion.py  linkofdrive.txt  load_split.py  mcp_server.py  mcp_server_copy.py  opencode.json  pdf_processor.py  pyproject.toml  qdrant_setup.py  rag_core.py  search.py  streaming.py  task10.py  task10_agent.py  task11.py  task11_streaming.py  task12.py  task7.py  task8.py  task9.py  task9_search.py  test_agent.py  test_e2e.py  test_mcp.py  test_retrieval.py  ui.py
.omo/run-continuation/: ses_0ffacfee1ffeXxTN4XN6BATnLc.json
documents/: auto_ingest_test.txt
qdrant_storage/: raft_state.json
qdrant_storage/collections/agentic_rag_collection/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/agentic_rag_collection/0/segments/20169727-6b0d-4aaa-90fd-73b372e4bbf3/: mutable_id_tracker.mappings
qdrant_storage/collections/agentic_rag_collection/0/segments/fcab97ce-dfc1-4d8c-a3dc-ec391cd80b30/: mutable_id_tracker.mappings
qdrant_storage/collections/agentic_rag_docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/documents/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/my_cv_collection/0/: newest_clocks.json
qdrant_storage/collections/my_documents/: config.json
qdrant_storage/collections/my_documents/0/: newest_clocks.json  replica_state.json
rag/: __init__.py  agent.py  config.py  loader.py  qdrant_store.py  search.py  streaming.py
(+28 files in other folders)
