[project]
name = "agentic-rag-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.8.0",
    "huggingface-hub>=1.20.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-pymupdf4llm>=1.27.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "pymupdf4llm>=1.27.2.3",
    "pypdf>=6.13.3",
    "qdrant-client[fastembed]>=1.18.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
